# mediScan

./: .gitignore  LICENSE  OCR.py  data.yaml  data_surgeon.yaml  main_pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: keep_alive.yaml
Back/: app.py  dependencies.py  ocr.py  pipeline.py
Back/core/: ocr.py  pipeline.py
Back/db/: database.py  models.py
Back/routers/: bouncer.py  login.py  profile.py  tools.py  upload.py
Back/services/: auth.py  rate_limiter.py  redis_client.py
front/: index.html  package-lock.json  package.json  vite.config.js
front/src/: App.jsx  index.css
front/src/api/: axios.js
front/src/components/: BookAnimate.jsx  FloatingMenu.css  FloatingMenu.jsx  LoaderModal.jsx  LoaderModel.css  SuccessAnimate.jsx  Toast.css  Toast.jsx
front/src/context/: AuthProvider.jsx
front/src/pages/: LoginScreen.jsx  Profile.jsx  Tools.jsx  Upload.jsx
trainers/: test_final.py  train_hunter.py  train_surgeon.py
