[project]
name = "mediScan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aistudio-sdk>=0.3.8",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "astor>=0.8.1",
    "bce-python-sdk>=0.9.59",
    "chardet>=5.2.0",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "colorlog>=6.10.1",
    "decorator>=5.2.1",
    "easyocr>=1.7.2",
    "future>=1.0.0",
    "h11>=0.16.0",
    "hf-xet>=1.2.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "huggingface-hub>=1.3.3",
    "imagesize>=1.4.1",
    "modelscope>=1.34.0",
    "numpy>=2.4.1",
    "opencv-contrib-python>=4.13.0.90",
    "opencv-python>=4.13.0.90",
    "openpyxl>=3.1.5",
    "opt-einsum>=3.4.0",
    "pandas>=2.3.3",
    "prettytable>=3.17.0",
    "protobuf>=6.33.4",
    "py-cpuinfo>=9.0.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.5",
    "pypdfium2>=5.3.0",
    "ruamel-yaml>=0.19.1",
    "safetensors>=0.7.0",
    "shellingham>=1.5.4",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "typer-slim>=0.21.1",
    "typing-inspection>=0.4.2",
    "ujson>=5.11.0",
    "ultralytics>=8.4.7",
    "wcwidth>=0.3.1",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"